fix(aeron): harden fault recovery and verify six product lines